# PhysicalHuman

./: CMakeLists.txt  ReadMe.txt  clean.bat.lnk  notes.txt  solution.lnk
cmake/: CMakeLists.txt
cmake/app/: CMakeLists.txt
cmake/depend/: depend.cmake
cmake/lib/: CMakeLists.txt
data/: ReadMe.txt
data/characters/current/: controllers.cfg  human.cfg  ik.cfg  joints.cfg  puppet.cfg  virtual.cfg
data/characters/default/: controllers.cfg  human.cfg  ik.cfg  joints.cfg
data/characters/man/: controllers.cfg  human.cfg  joints.cfg  puppet.cfg  virtual.cfg
data/characters/man/motions/Jump/: 100_15_12_2_0_2_56.motion  100_27_9_1_0_2_56.motion  103_32_11_2_1_1_70.motion  103_82_8_1_0_0_57.motion  104_39_11_1_1_0_74.motion  105_24_10_0_6_7_72.motion  105_6_10_0_1_5_68.motion  105_9_9_2_0_0_65.motion  106_53_10_2_1_4_65.motion  107_1_8_2_0_1_56.motion  107_8_10_2_1_1_56.motion  108_23_10_1_1_1_59.motion  109_13_10_2_0_2_59_.motion  109_18_8_2_0_0_68.motion  112_13_10_3_0_4_62_.motion  112_28_8_2_2_0_67.motion  112_73_12_2_0_0_54.motion  113_26_6_1_1_0_66_.motion  113_39_11_1_0_0_54.motion  114_28_6_1_0_1_62_.motion  114_8_11_1_1_1_79_.motion  116_49_9_2_1_0_60.motion  118_32_7_1_1_0_75.motion  118_9_9_2_0_0_69.motion  119_124_10_2_0_1_59.motion  119_24_10_2_0_1_58_.motion  119_80_10_3_1_0_58.motion  120_20_9_1_1_0_65.motion  (+226 more)
data/characters/quit/: controllers.cfg  human.cfg  ik.cfg  joints.cfg  virtual.cfg
data/control_files/: control_default.motion  default_node.motion  segment_control_default.motion  time_warp.motion
data/glove/: glove.cfg
data/kinect/: default.cfg  home.cfg  work.cfg  work2.cfg  work_skin.cfg
data/kinematics/: cmu_skel.bvh  dynoman.m  dynoman.s  hand.s  man.s  man.sd  man_walks.bvh  primohd_hand.m  primohd_hand.s
data/models/: RightHand.m  RightHand.s  manipulator.mb  platform.mb  rightHand.mb
data/ogre/: win32_ogre.cfg  win32_plugins.cfg  win32_plugins_d.cfg  win32_resources.cfg
data/scenes/: Boxes.scene  FlatGround.scene  Platform.scene  Platform2.scene  Platform3.scene
include/: common.h  data_glove.h  data_glove_win.h  data_glove_win_events.h  data_glove_win_fl.cpp  data_glove_win_fl.fl  data_glove_win_fl.h  depth_image.h  game.h  game_events.h  game_fluid.cpp  game_fluid.fl  game_fluid.h  game_og_viewer.h  game_viewer.h  game_window.h  hand_viewer.h  human_app_main.h  kinect.h  kinect_events.h  kinect_fluid.cpp  kinect_fluid.fl  kinect_fluid.h  kinect_main_win.h  kinect_manager.h  kinect_marker.h  kinect_viewer.h  m3dconnexion.h  neural_net.h  neural_net_events.h  neural_net_fluid.cpp  neural_net_fluid.fl  neural_net_fluid.h  neuralnet_win.h  ode_box.h  ode_model.h  ode_object.h  ode_spring.h  ode_world.h  ph_char_builder.h  (+58 more)
lib/: HumanWindow-dbg.lib  KinectWindow-dbg.lib  Physics-dbg.lib
src/App/: human_app_main.cpp
src/Game/: game.cpp  game_todo.txt
src/GameWindow/: game_events.cpp  game_og_viewer.cpp  game_viewer.cpp  game_window.cpp
src/Graphics/: util_curve.cpp  util_models.cpp  util_primitives.cpp  util_trajectory.cpp
src/Human/: ph_char_builder.cpp  ph_cnt_walk.cpp  ph_controller.cpp  ph_env_builder.cpp  ph_file_manager.cpp  ph_human.cpp  ph_human_getters.cpp  ph_human_loader.cpp  ph_joint.cpp  ph_manager.cpp  ph_manip.cpp  ph_manip_frame.cpp  ph_manip_ik.cpp  ph_manip_puppet.cpp  ph_manip_virtual.cpp  ph_mod.cpp  ph_mod_balance.cpp  ph_mod_com.cpp  ph_mod_contact.cpp  ph_mod_gravity.cpp  ph_mod_ik.cpp  ph_mod_manip.cpp  ph_mod_puppet.cpp  ph_mod_ref.cpp  ph_mod_root.cpp  ph_mod_template.cpp  ph_mod_virtual.cpp  ph_motion.cpp  ph_motion_manager.cpp  ph_motion_manager_editing.cpp  ph_motion_segmenter.cpp  ph_state_manager.cpp  ph_trajectory_planner.cpp
src/Kinect/: data_glove.cpp  depth_image.cpp  hand_viewer.cpp  kinect.cpp  kinect_main_win.cpp  kinect_manager.cpp  kinect_marker.cpp  kinect_viewer.cpp  point_cloud.cpp
src/KinectApp/: app_main.cpp
src/NeuralNetApp/: neural_net_app.cpp  neuralnet_win.cpp
src/Physics/: ode_box.cpp  ode_model.cpp  ode_object.cpp  ode_sphere.cpp  ode_spring.cpp  ode_world.cpp
src/Test/: client_test.cpp
src/Utlities/: data_glove_win.cpp  m3dconnexion.cpp  neural_net.cpp  util.cpp  util_channel.cpp  util_channel_traj.cpp  util_file_manager.cpp  util_image_viewer.cpp  util_manipulator.cpp  util_motion.cpp  util_parameter.cpp  util_serializable.cpp  util_server.cpp
src/Window/: phw_events.cpp  phw_graph_viewer.cpp  phw_node_viewer.cpp  phw_viewer.cpp  phw_window.cpp  util_serializable_editor.cpp
visualc10/: Game.vcxproj  HumanApp.vcxproj  HumanWindow.vcxproj  HumanWindow.vcxproj.filters  KinectApp.vcxproj  PhysicalHuman.sdf  PhysicalHuman.sln  PhysicalHuman.vcxproj  PhysicalHuman.vcxproj.filters  Utilities.vcxproj  Utilities.vcxproj.filters
visualc11/: HumanApp.vcxproj  HumanApp.vcxproj.filters  KinectApp.vcxproj  KinectManager.vcxproj  KinectWindow.vcxproj  KinectWindow.vcxproj.filters  NeuralNetApp.vcxproj  PhysicalHuman.v11.suo.r1523  PhysicalHuman.v11.suo.r1533  Physics.vcxproj  Utilities.vcxproj  Utilities.vcxproj.filters  clean.bat
vs2012/: ClientTest.vcxproj  GameWindow.vcxproj  HumanApp-dbg.psess  HumanApp.vcxproj  HumanApp.vcxproj.filters  KinectWindow.vcxproj  PhysicalHuman.sln  UpgradeLog.htm  UpgradeLog2.htm  Utilities.vcxproj  Utilities.vcxproj.filters
(+137 files in other folders)
